OpenSource MemoryFootprint API for JSC command line tool https://bugs.webkit.org/show_bug.cgi?id=200541

Reviewed by Saam Barati.

Source/JavaScriptCore:

Use wtf/spi/darwin/ProcessMemoryFootprint.h instead of WebKitAdditions/MemoryFootprint.h
for process memory stats.

* jsc.cpp:
(MemoryFootprint::MemoryFootprint):

Source/WTF:

OpenSource version of WebKitAdditions/MemoryFootprint.h.

* WTF.xcodeproj/project.pbxproj:
* wtf/spi/darwin/ProcessMemoryFootprint.h: Added.
(ProcessMemoryFootprint::now):
(ProcessMemoryFootprint::resetPeak):


Canonical link: https://commits.webkit.org/214324@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@248441 268f45cc-cd09-0410-ab3c-d52691b4dbfc